--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,65 +1,116 @@
 <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-12">
-        <div class="card shadow-lg">
-          <div class="card-body">
-            <h3 class="text-center mb-4">{{ mostrarRegistro ? 'Registrarse' : 'Login' }}</h3>
-  
-            @if (!mostrarRegistro) {
-              <form (submit)="login(); $event.preventDefault();">
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" [(ngModel)]="email" name="email">
-                </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label">Contraseña</label>
-                  <input type="password" class="form-control" id="password" [(ngModel)]="password" name="password">
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-              </form>
-  
-              <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
-  
-              <div class="mt-3 text-center">
-                <span>¿Aún no tienes cuenta?</span>
-                <a href="#" (click)="alternarFormulario($event)">Regístrate aquí</a>
-              </div>
-            }
-  
-            @if (mostrarRegistro) {
-              <button class="btn-close float-end" (click)="alternarFormulario($event)"></button>
-              <form (submit)="registrar(); $event.preventDefault();">
-                <div class="mb-3">
-                  <label for="emailRegistro" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="emailRegistro" [(ngModel)]="email" name="email">
-                </div>
-                <div class="mb-3">
-                  <label for="passwordRegistro" class="form-label">Contraseña</label>
-                  <input type="password" class="form-control" id="passwordRegistro" [(ngModel)]="password" name="password">
-                </div>
-                <div class="mb-3">
-                  <label for="nombre" class="form-label">Nombre</label>
-                  <input type="text" class="form-control" id="nombre" [(ngModel)]="nombre" name="nombre">
-                </div>
-                <div class="mb-3">
-                  <label for="apellido" class="form-label">Apellido</label>
-                  <input type="text" class="form-control" id="apellido" [(ngModel)]="apellido" name="apellido">
-                </div>
-                <div class="mb-3">
-                  <label for="dni" class="form-label">DNI</label>
-                  <input type="text" class="form-control" id="dni" [(ngModel)]="dni" name="dni">
-                </div>
-                <button type="submit" class="btn btn-success w-100">Registrarse</button>
-              </form>
-  
-              <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
-  
-              <div class="mt-3 text-center">
-                <a href="#" (click)="alternarFormulario($event)">Iniciar sesión</a>
-              </div>
-            }
+  <div class="row justify-content-center">
+    <div class="col-md-12">
+      <div class="card shadow-lg">
+        <div class="card-body">
+          <h3 class="text-center mb-4">
+            {{ mostrarRegistro ? "Registrarse" : "Login" }}
+          </h3>
+
+          @if (!mostrarRegistro) {
+          <form (submit)="login(); $event.preventDefault()">
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                [(ngModel)]="email"
+                name="email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Contraseña</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                [(ngModel)]="password"
+                name="password"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary w-100">
+              Ingresar
+            </button>
+          </form>
+
+          <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
+
+          <div class="mt-3 text-center">
+            <span>¿Aún no tienes cuenta?</span>
+            <a href="#" (click)="alternarFormulario($event)">Regístrate aquí</a>
           </div>
+          } @if (mostrarRegistro) {
+          <button
+            class="btn-close float-end"
+            (click)="alternarFormulario($event)"
+          ></button>
+          <form (submit)="registrar(); $event.preventDefault()">
+            <div class="mb-3">
+              <label for="emailRegistro" class="form-label">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="emailRegistro"
+                [(ngModel)]="email"
+                name="email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="passwordRegistro" class="form-label"
+                >Contraseña</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="passwordRegistro"
+                [(ngModel)]="password"
+                name="password"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nombre"
+                [(ngModel)]="nombre"
+                name="nombre"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="apellido" class="form-label">Apellido</label>
+              <input
+                type="text"
+                class="form-control"
+                id="apellido"
+                [(ngModel)]="apellido"
+                name="apellido"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="dni" class="form-label">DNI</label>
+              <input
+                type="text"
+                class="form-control"
+                id="dni"
+                [(ngModel)]="dni"
+                name="dni"
+              />
+            </div>
+            <button type="submit" class="btn btn-success w-100">
+              Registrarse
+            </button>
+          </form>
+
+          <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
+
+          <div class="mt-3 text-center">
+            <a href="#" (click)="alternarFormulario($event)">Iniciar sesión</a>
+          </div>
+          }
         </div>
       </div>
     </div>
   </div>
+</div>
