--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,116 +1,121 @@
+
+<div fxLayout="column" fxLayoutAlign="center center" class="login-container">
+  <mat-card class="login-card">
+    <mat-card-header class="login-header">
+      <mat-card-title>
+        <h2 class="login-title">Bienvenido</h2>
+      </mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+      <form fxLayout="column" fxLayoutGap="20px">
+        <mat-form-field>
+    <mat-label>Enter your email</mat-label>
+    <input
+      matInput
+      placeholder="pat@example.com"
+      [formControl]="email"
+      (blur)="updateErrorMessage()"
+      required
+    />
+    @if (email.invalid) {
+      <mat-error>{{errorMessage()}}</mat-error>
+    }
+  </mat-form-field>
+
+        <mat-form-field>
+    <mat-label>Enter your password</mat-label>
+    <input matInput [type]="hide() ? 'password' : 'text'" />
+    <button
+      matIconButton
+      matSuffix
+      (click)="clickEvent($event)"
+      [attr.aria-label]="'Hide password'"
+      [attr.aria-pressed]="hide()"
+    >
+      <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+  </mat-form-field>
+
+        <button mat-raised-button color="primary" class="login-button full-width">
+          Iniciar sesión
+        </button>
+      </form>
+    </mat-card-content>
+
+    <mat-card-actions fxLayoutAlign="center center">
+      <span class="register-text">¿Aún no tienes cuenta? <a href="#">Regístrate</a></span>
+    </mat-card-actions>
+  </mat-card>
+</div>
+
+
+
+
+<!--
 <div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-12">
-      <div class="card shadow-lg">
-        <div class="card-body">
-          <h3 class="text-center mb-4">
-            {{ mostrarRegistro ? "Registrarse" : "Login" }}
-          </h3>
-
-          @if (!mostrarRegistro) {
-          <form (submit)="login(); $event.preventDefault()">
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                [(ngModel)]="email"
-                name="email"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Contraseña</label>
-              <input
-                type="password"
-                class="form-control"
-                id="password"
-                [(ngModel)]="password"
-                name="password"
-              />
-            </div>
-            <button type="submit" class="btn btn-primary w-100">
-              Ingresar
-            </button>
-          </form>
-
-          <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
-
-          <div class="mt-3 text-center">
-            <span>¿Aún no tienes cuenta?</span>
-            <a href="#" (click)="alternarFormulario($event)">Regístrate aquí</a>
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+        <div class="card shadow-lg">
+          <div class="card-body">
+            <h3 class="text-center mb-4">{{ mostrarRegistro ? 'Registrarse' : 'Login' }}</h3>
+  
+            @if (!mostrarRegistro) {
+              <form (submit)="login(); $event.preventDefault();">
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" [(ngModel)]="email" name="email">
+                </div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Contraseña</label>
+                  <input type="password" class="form-control" id="password" [(ngModel)]="password" name="password">
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+              </form>
+  
+              <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
+  
+              <div class="mt-3 text-center">
+                <span>¿Aún no tienes cuenta?</span>
+                <a href="#" (click)="alternarFormulario($event)">Regístrate aquí</a>
+              </div>
+            }
+  
+            @if (mostrarRegistro) {
+              <button class="btn-close float-end" (click)="alternarFormulario($event)"></button>
+              <form (submit)="registrar(); $event.preventDefault();">
+                <div class="mb-3">
+                  <label for="emailRegistro" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="emailRegistro" [(ngModel)]="email" name="email">
+                </div>
+                <div class="mb-3">
+                  <label for="passwordRegistro" class="form-label">Contraseña</label>
+                  <input type="password" class="form-control" id="passwordRegistro" [(ngModel)]="password" name="password">
+                </div>
+                <div class="mb-3">
+                  <label for="nombre" class="form-label">Nombre</label>
+                  <input type="text" class="form-control" id="nombre" [(ngModel)]="nombre" name="nombre">
+                </div>
+                <div class="mb-3">
+                  <label for="apellido" class="form-label">Apellido</label>
+                  <input type="text" class="form-control" id="apellido" [(ngModel)]="apellido" name="apellido">
+                </div>
+                <div class="mb-3">
+                  <label for="dni" class="form-label">DNI</label>
+                  <input type="text" class="form-control" id="dni" [(ngModel)]="dni" name="dni">
+                </div>
+                <button type="submit" class="btn btn-success w-100">Registrarse</button>
+              </form>
+  
+              <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
+  
+              <div class="mt-3 text-center">
+                <a href="#" (click)="alternarFormulario($event)">Iniciar sesión</a>
+              </div>
+            }
           </div>
-          } @if (mostrarRegistro) {
-          <button
-            class="btn-close float-end"
-            (click)="alternarFormulario($event)"
-          ></button>
-          <form (submit)="registrar(); $event.preventDefault()">
-            <div class="mb-3">
-              <label for="emailRegistro" class="form-label">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="emailRegistro"
-                [(ngModel)]="email"
-                name="email"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="passwordRegistro" class="form-label"
-                >Contraseña</label
-              >
-              <input
-                type="password"
-                class="form-control"
-                id="passwordRegistro"
-                [(ngModel)]="password"
-                name="password"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre</label>
-              <input
-                type="text"
-                class="form-control"
-                id="nombre"
-                [(ngModel)]="nombre"
-                name="nombre"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="apellido" class="form-label">Apellido</label>
-              <input
-                type="text"
-                class="form-control"
-                id="apellido"
-                [(ngModel)]="apellido"
-                name="apellido"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="dni" class="form-label">DNI</label>
-              <input
-                type="text"
-                class="form-control"
-                id="dni"
-                [(ngModel)]="dni"
-                name="dni"
-              />
-            </div>
-            <button type="submit" class="btn btn-success w-100">
-              Registrarse
-            </button>
-          </form>
-
-          <p class="text-danger text-center mt-2">{{ mensajeError }}</p>
-
-          <div class="mt-3 text-center">
-            <a href="#" (click)="alternarFormulario($event)">Iniciar sesión</a>
-          </div>
-          }
         </div>
       </div>
     </div>
   </div>
-</div>
+-->
