--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,3 @@
-
 <div fxLayout="column" fxLayoutAlign="center center" class="login-container">
   <mat-card class="login-card">
     <mat-card-header class="login-header">
@@ -8,49 +7,60 @@
     </mat-card-header>
 
     <mat-card-content>
-      <form fxLayout="column" fxLayoutGap="20px">
-        <mat-form-field>
-    <mat-label>Enter your email</mat-label>
-    <input
-      matInput
-      placeholder="pat@example.com"
-      [formControl]="email"
-      (blur)="updateErrorMessage()"
-      required
-    />
-    @if (email.invalid) {
-      <mat-error>{{errorMessage()}}</mat-error>
-    }
-  </mat-form-field>
+      <form (ngSubmit)="log()" fxLayout="column" fxLayoutGap="20px">
+        <mat-form-field appearance="outline">
+          <mat-label>Introduce tu correo electrónico</mat-label>
+          <input
+            matInput
+            placeholder="pat@example.com"
+            [formControl]="email"
+            (blur)="updateErrorMessage()"
+            required
+          />
+          @if (email.invalid) {
+          <mat-error>{{ errorMessage() }}</mat-error>
+          }
+        </mat-form-field>
 
-        <mat-form-field>
-    <mat-label>Enter your password</mat-label>
-    <input matInput [type]="hide() ? 'password' : 'text'" />
-    <button
-      matIconButton
-      matSuffix
-      (click)="clickEvent($event)"
-      [attr.aria-label]="'Hide password'"
-      [attr.aria-pressed]="hide()"
-    >
-      <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-  </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Introduce tu contraseña</mat-label>
+          <input matInput  
+          [formControl]="passwordd"
+          (blur)="updateErrorMessage()"
+          [type]="hide() ? 'password' : 'text'" 
+          />
+          @if (passwordd.invalid) {
+          <mat-error>{{ errorMessage() }}</mat-error>
+          }
+          <button
+            matIconButton
+            matSuffix
+            (click)="clickEvent($event)"
+            [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide()"
+          >
+            <mat-icon>{{ hide() ? "visibility_off" : "visibility" }}</mat-icon>
+          </button>
+        </mat-form-field>
 
-        <button mat-raised-button color="primary" class="login-button full-width">
+        <button
+          type="submit"
+          mat-raised-button
+          color="primary"
+          class="login-button full-width"
+        >
           Iniciar sesión
         </button>
       </form>
     </mat-card-content>
 
     <mat-card-actions fxLayoutAlign="center center">
-      <span class="register-text">¿Aún no tienes cuenta? <a href="#">Regístrate</a></span>
+      <span class="register-text"
+        >¿Aún no tienes cuenta? <a href="#">Regístrate</a></span
+      >
     </mat-card-actions>
   </mat-card>
 </div>
-
-
-
 
 <!--
 <div class="container mt-5">
