--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg container">
       <div class="d-flex align-items-center">
         <!-- Logo -->
-        <img src="assets/logo.svg" alt="Logo" width="40" class="me-2" />
+        <img src="http://10.147.18.177:9095/api/media/download/35" alt="Logo" width="40" class="me-2" />
         <a class="navbar-brand fw-bold" routerLink="/">Agenda Médica</a>
       </div>
 
