--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <header class="bg-light shadow-sm mb-4">
     <nav class="navbar navbar-expand-lg container">
       <div class="d-flex align-items-center">
-        <!-- Logo -->
-        <img src="http://10.147.18.177:9095/api/media/download/35" alt="Logo" width="40" class="me-2" />
-        <a class="navbar-brand fw-bold" routerLink="/">Agenda Médica</a>
+        <!-- Logo 
+        <img src="http://10.147.18.177:9095/api/media/download/35" alt="Logo" width="40" class="me-2" />-->
+        <a class="navbar-brand fw-bold" routerLink="/" class="navbar-brand fw-bold text-primary text-decoration-none">Agenda Médica</a>
       </div>
 
       <!-- Navegación -->
