--- a/src/app/paciente/compoentes/home/home.component.html
+++ b/src/app/paciente/compoentes/home/home.component.html
@@ -1,11 +1,11 @@
-<div fxLayout="column" fxLayoutGap="20px" style="padding: 20px;">
+<div fxLayout="column" fxLayoutGap="20px" style="padding: 20px">
   <mat-card>
     <div fxLayout="row" fxLayoutAlign="space-between center">
       <div>
-        <h2>👋 ¡Hola, {{ nombrePaciente }}!</h2>
+        <h2>¡Hola, {{ userName }}!</h2>
         <p>Bienvenido a tu panel de citas médicas.</p>
       </div>
-      <button mat-raised-button color="primary" routerLink="/paciente/agendar">
+      <button mat-raised-button color="primary" routerLink="/paciente/agenda-cita">
         <mat-icon>add</mat-icon> Agendar nueva cita
       </button>
     </div>
@@ -14,8 +14,11 @@
   <mat-card>
     <h3>🗓️ Próximas citas</h3>
 
-    <table mat-table [dataSource]="citas" class="mat-elevation-z1 full-width-table">
-
+    <table
+      mat-table
+      [dataSource]="citas"
+      class="mat-elevation-z1 full-width-table"
+    >
       <!-- Médico -->
       <ng-container matColumnDef="medico">
         <th mat-header-cell *matHeaderCellDef>Médico</th>
@@ -25,7 +28,9 @@
       <!-- Fecha -->
       <ng-container matColumnDef="fecha">
         <th mat-header-cell *matHeaderCellDef>Fecha</th>
-        <td mat-cell *matCellDef="let cita">{{ cita.fecha | date:'fullDate' }}</td>
+        <td mat-cell *matCellDef="let cita">
+          {{ cita.fecha | date : "fullDate" }}
+        </td>
       </ng-container>
 
       <!-- Hora -->
@@ -48,15 +53,17 @@
       <ng-container matColumnDef="accion">
         <th mat-header-cell *matHeaderCellDef>Acción</th>
         <td mat-cell *matCellDef="let cita">
-          <button mat-icon-button [routerLink]="['/paciente/mis-citas', cita.id]">
+          <button
+            mat-icon-button
+            [routerLink]="['/paciente/mis-citas', cita.id]"
+          >
             <mat-icon>visibility</mat-icon>
           </button>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
     <div *ngIf="citas.length === 0" class="text-center p-4">
