--- a/src/app/paciente/compoentes/agenda-fecha/agenda-fecha.component.css
+++ b/src/app/paciente/compoentes/agenda-fecha/agenda-fecha.component.css
@@ -1,70 +1,6 @@
 /* Encabezado azul */
-.header {
-  background: #007bff;
+.ocupado {
+  background-color: #f44336;
   color: white;
-  text-align: center;
-  padding: 15px;
-  border-radius: 8px 8px 0 0;
-}
-
-.calendar-header {
-  display: flex;
-  justify-content: space-between;
-  background: rgb(225, 171, 34);
-  color: white;
-  padding: 10px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.calendar {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.calendar th, .calendar td {
-  width: 14%;
-  padding: 10px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.calendar .disabled {
-  background: #ddd;
-  pointer-events: none;
-}
-
-.calendar .selected {
-  background: #007bff;
-  color: white;
-}
-
-/* 🔹 Scroll para horarios */
-.horarios-container {
-  max-height: 200px;
-  overflow-y: auto;
-  border: 1px solid #ccc;
-  padding: 5px;
-}
-
-.horarios {
-  padding: 0;
-  margin: 0;
-}
-
-.horarios li {
-  list-style: none;
-  padding: 10px;
-  border: 1px solid #ccc;
-  margin: 5px 0;
-  cursor: pointer;
-}
-
-.horarios .selected {
-  background: #007bff;
-  color: white;
-}
-.buttons{
-  display: flex;
-  justify-content:space-between;
+  border-radius: 5px;
 }
