--- a/src/app/paciente/compoentes/seleccionar-especialidad/seleccionar-especialidad.component.html
+++ b/src/app/paciente/compoentes/seleccionar-especialidad/seleccionar-especialidad.component.html
@@ -1,14 +1,16 @@
-<div fxLayout="column" fxLayoutGap="20px">
-  <mat-form-field appearance="fill" class="full-width">
-    <mat-label>Seleccione una especialidad</mat-label>
-    <mat-select formControlName="especialidad" (selectionChange)="onChange($event.value)">
-      <mat-option *ngFor="let esp of especialidades" [value]="esp.id">
-        {{ esp.nombre }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+<form [formGroup]="formGroup">
+    <div fxLayout="column" fxLayoutGap="20px">
+    <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Seleccione una especialidad</mat-label>
+        <mat-select formControlName="especialidad" (selectionChange)="onChange($event.value)">
+        <mat-option *ngFor="let esp of especialidades" [value]="esp.id">
+            {{ esp.nombre }}
+        </mat-option>
+        </mat-select>
+    </mat-form-field>
 
-  <div *ngIf="cargando" fxLayoutAlign="center">
-    <mat-spinner diameter="30"></mat-spinner>
-  </div>
-</div>
+    <div *ngIf="cargando" fxLayoutAlign="center">
+        <mat-spinner diameter="30"></mat-spinner>
+    </div>
+    </div>
+</form>
