--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,30 +4,38 @@
       <div class="d-flex align-items-center">
         <!-- Logo 
         <img src="http://10.147.18.177:9095/api/media/download/35" alt="Logo" width="40" class="me-2" />-->
-        <a class="navbar-brand fw-bold" routerLink="/" class="navbar-brand fw-bold text-primary text-decoration-none">Agenda Médica</a>
+        <a class="navbar-brand fw-bold" routerLink="/"
+          class="navbar-brand fw-bold text-primary text-decoration-none">Agenda Médica</a>
       </div>
 
       <!-- Navegación -->
       <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a routerLink="/" routerLinkActive="active" class="nav-link"
-              >Inicio</a
-            >
+            <a routerLink="/" routerLinkActive="active" class="nav-link">Inicio</a>
           </li>
-          <li
-            class="nav-item"
-            *ngIf="
+          <li class="nav-item" *ngIf="
               (isLoggedIn && role === UserRole.PACIENTE) || role === UserRole.ADMIN
-            "
-          >
+            ">
             <a routerLink="/paciente" class="nav-link">Mis Citas</a>
           </li>
-          <li
-            class="nav-item"
-            *ngIf="(isLoggedIn && role === UserRole.MEDICO) || role === UserRole.ADMIN"
-          >
-            <a routerLink="/medico" class="nav-link">Agenda</a>
+
+          <!--aqui estamos modificando fernandoooo*********************************************************-->
+
+          <li class="nav-item" *ngIf="
+              (isLoggedIn && role === UserRole.MEDICO) || role === UserRole.ADMIN
+            ">
+            <a routerLink="/medico" class="nav-link">Mis Citas</a>
+          </li>
+          <li class="nav-item" *ngIf="
+              isLoggedIn && role === UserRole.MEDICO
+          ">
+            <a routerLink="/medico/calendario" class="nav-link">Mi Agenda</a>
+          </li>
+          <li class="nav-item" *ngIf="
+              isLoggedIn && role === UserRole.MEDICO
+            ">
+            <a routerLink="/medico/recetas" class="nav-link">Recetas</a>
           </li>
           <li class="nav-item" *ngIf="isLoggedIn && role === UserRole.ADMIN">
             <a routerLink="/admin" class="nav-link">Panel Admin</a>
@@ -48,12 +56,7 @@
         </div>
 
         <!-- Login -->
-        <a
-          *ngIf="!isLoggedIn"
-          class="btn btn-outline-primary ms-3"
-          routerLink="/login"
-          >Ingresar</a
-        >
+        <a *ngIf="!isLoggedIn" class="btn btn-outline-primary ms-3" routerLink="/login">Ingresar</a>
       </div>
     </nav>
   </header>
@@ -65,17 +68,13 @@
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white py-4 mt-auto">
-    <div
-      class="container d-flex flex-column flex-md-row justify-content-between align-items-center"
-    >
+    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
       <div class="mb-3 mb-md-0">
         <strong>Agenda Médica © {{ currentYear }}</strong> — Proyecto V1
       </div>
 
       <div>
-        <a href="#" class="text-white me-3 text-decoration-none"
-          >Política de privacidad</a
-        >
+        <a href="#" class="text-white me-3 text-decoration-none">Política de privacidad</a>
         <a href="#" class="text-white me-3 text-decoration-none">Términos</a>
         <a href="#" class="text-white text-decoration-none">Contacto</a>
       </div>
