--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <!-- Logo 
         <img src="http://10.147.18.177:9095/api/media/download/35" alt="Logo" width="40" class="me-2" />-->
         <a class="navbar-brand fw-bold" routerLink="/"
-          class="navbar-brand fw-bold text-primary text-decoration-none">Agenda Médica</a>
+          class="navbar-brand fw-bold text-primary text-decoration-none">Clinica Velázquez</a>
       </div>
 
       <!-- Navegación -->
@@ -64,13 +64,14 @@
   <!-- CONTENIDO PRINCIPAL -->
   <main class="container mb-5 main">
     <router-outlet></router-outlet>
+    <app-dashboard *ngIf="!isLoggedIn"></app-dashboard>
   </main>
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white py-4 mt-auto">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
       <div class="mb-3 mb-md-0">
-        <strong>Agenda Médica © {{ currentYear }}</strong> — Proyecto V1
+        <strong>Agenda Médica © {{ currentYear }}</strong>
       </div>
 
       <div>
