--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
   <footer class="bg-dark text-white py-4 mt-auto">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
       <div class="mb-3 mb-md-0">
-        <strong>Agenda Médica © {{ currentYear }}</strong>
+        <strong>Agenda Médica - Clínica Velázquez © {{ currentYear }}</strong>
       </div>
 
       <div>
