--- a/src/app/paciente/compoentes/home/home.component.html
+++ b/src/app/paciente/compoentes/home/home.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <div fxLayout="row" fxLayoutAlign="space-between center">
       <div>
-        <h2>¡Hola, {{ userName }}!</h2>
+        <h2>Hola, {{ userName }}</h2>
         <p>Bienvenido a tu panel de citas médicas.</p>
       </div>
       <button mat-raised-button color="primary" routerLink="/paciente/agenda-cita">
@@ -19,13 +19,12 @@
       [dataSource]="citas"
       class="mat-elevation-z1 full-width-table"
     >
-      <!-- Médico -->
+      
       <ng-container matColumnDef="medico">
         <th mat-header-cell *matHeaderCellDef>Médico</th>
         <td mat-cell *matCellDef="let cita">{{ cita.medico }}</td>
       </ng-container>
 
-      <!-- Fecha -->
       <ng-container matColumnDef="fecha">
         <th mat-header-cell *matHeaderCellDef>Fecha</th>
         <td mat-cell *matCellDef="let cita">
@@ -33,13 +32,11 @@
         </td>
       </ng-container>
 
-      <!-- Hora -->
       <ng-container matColumnDef="hora">
         <th mat-header-cell *matHeaderCellDef>Hora</th>
         <td mat-cell *matCellDef="let cita">{{ cita.hora }}</td>
       </ng-container>
 
-      <!-- Estado -->
       <ng-container matColumnDef="estado">
         <th mat-header-cell *matHeaderCellDef>Estado</th>
         <td mat-cell *matCellDef="let cita">
